nextcloud/0401_nextcloud-db_deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: nextcloud
  name: nextcloud-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nextcloud-db
  template:
    metadata:
      labels:
        app: nextcloud-db
    spec:
      hostname: nextcloud-db
      volumes:
        - name: database-ebs
          persistentVolumeClaim:
            claimName: nextcloud-db-claim
      containers:
        - name: nextcloud-db
          image: postgres:13-alpine
          ports:
            - name: pod-db-port
              containerPort: 5432
              protocol: TCP
          volumeMounts:
            - name: database-ebs
              mountPath: /var/lib/postgresql/data
              subPath: data
