nextcloud/0500_nextcloud_deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud
  namespace: nextcloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "nextcloud"
  template:
    metadata:
      namespace: nextcloud
      labels:
        app: nextcloud
    spec:
      hostname: nextcloud
      securityContext:
        fsGroup: 33
        runAsUser: 33
        runAsGroup: 33
        fsGroupChangePolicy: "OnRootMismatch"

      volumes:
        - name: nextcloud-ebs
          persistentVolumeClaim:
            claimName: nextcloud-data-claim
      containers:
        - name: nextcloud
          image: nextcloud:23-apache
          imagePullPolicy: Always
          resources:
            requests:
              memory: 1024Mi
          ports:
            - name: pod-nxcld-port
              containerPort: 80
              protocol: TCP
          volumeMounts:
            - name: nextcloud-ebs
              mountPath: /var/www/html
