nextcloud/0402_nextcloud-db_service.yml
---
apiVersion: v1
kind: Service
metadata:
  namespace: nextcloud
  name: nextcloud-db
  labels:
    app: db-service
spec:
  type: ClusterIP
  selector:
    app: nextcloud-db
  ports:
  - name: db-port
    protocol:  TCP
    port: 5432
    targetPort: pod-db-port
