nextcloud/0404_nextcloud-redis_service.yml
---
apiVersion: v1
kind: Service
metadata:
  namespace: nextcloud
  name: redis-service
  labels:
    app: redis-service
spec:
  type: ClusterIP
  selector:
    app: nextcloud-redis
  ports:
  - name: redis-port
    protocol:  TCP
    port: 6379
    targetPort: pod-redis-port
