nextcloud/0501_nextcloud_service.yml
---
apiVersion: v1
kind: Service
metadata:
  namespace: nextcloud
  name: nextcloud-service
  labels:
    app: nextcloud
spec:
  type: NodePort
  selector:
    app: nextcloud
  ports:
  - name: nextcloud-port
    protocol:  TCP
    port: 9000
    targetPort: pod-nxtcld-port
  - name: nginx-port
    protocol: TCP
    port: 8080
    targetPort: pod-nginx-port
